--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,1 +1,31 @@
+on:
+  push:
+    branches:
+      - main
 
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: 'write'
+    steps:
+      - name: Azure Login
+        uses: azure/login@v4
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      
+      - uses: hashicorp/setup-terraform@v3
+        with:
+         terraform_version: latest
+      
+      - name: path
+        run: echo "$GITHUB_WORKSPACE"
+        
+      - name: Terraform Init
+        id: init
+        run: terraform init
