--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -48,6 +48,13 @@ jobs:
       - name: Approval Passed
         run: echo "Manual approval completed!"
       
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      
       - name: Checkout repo
         uses: actions/checkout@v4
 
