--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -56,6 +56,7 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          identity:  true
       
       - name: Checkout repo
         uses: actions/checkout@v4
