--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -43,20 +43,19 @@ jobs:
   manual-approval:
     needs: installation_and_deployment
     runs-on: ubuntu-latest
-    environment: Manual-approval  # 👈 This triggers the manual review step
+    environment: Manual-approval  # This triggers the manual review step
     permissions:
       id-token: 'write'
     steps:
       - name: Approval Passed
-        run: echo "Manual approval completed!"
-      
-      - name: Azure Login
+        run: echo "Manual approval completed!" # 👈 This triggers the manual review step
+
+      # Use OIDC authentication in the second job
+      - name: Azure Login (OIDC)
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          identity: true  # Enable OIDC authentication for GitHub Actions
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          identity:  true
       
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -65,6 +64,7 @@ jobs:
         with:
          terraform_version: latest
 
+      
       - name: Terraform Init
         id: init
         run: terraform init
